# fibbot_project

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/: action.yml
.github/actions/: action.yml
.github/workflows/: Dockerfile  test.yml
scripts/: fibbot
src/: config.rs  extract.rs  fibonacci.rs  github.rs  main.rs  tests.rs  utils.rs
